# gyur-os

./: .gitignore  .gitmodules  BOOTX64.efi  Cargo.toml  OVMF_VARS.fd  README.md  build.rs  build.sh  check.sh  kernel.json  mmap.csv  run_qemu.sh
.cargo/: config  config.toml
_dumped/: bootloader.txt  kernel.txt
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: lib.rs  main.rs
kernel/: Cargo.toml  rust-toolchain.toml  x86_64-gyur.json
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  canvas.rs  console.rs  cursor.rs  geometry.rs  globals.rs  lib.rs  main.rs  memmgr.rs  message.rs  pci.rs  pgmgr.rs  screen.rs  sysfont.rs  window.rs  xhci.rs  xhci_driver.rs
kernel/src/globals/: allocator.rs  apic.rs  console.rs  interrupts.rs  logger.rs  message.rs  mod.rs  paging.rs  pgmgr.rs  screen.rs  segments.rs  xhci.rs
kernel/usb-xhci/: Cargo.toml
kernel/usb-xhci/src/: arraymap.rs  bus.rs  class.rs  controller.rs  descriptor.rs  device.rs  endpoint.rs  lib.rs  ring.rs  setup.rs
kernel/volatile_field/: Cargo.toml
kernel/volatile_field/src/: lib.rs
kernel/volatile_field/volatile_field_macros/: Cargo.toml
kernel/volatile_field/volatile_field_macros/src/: lib.rs
sh/: build.sh  check.sh  create_disk.sh  dump.sh  run_qemu.sh  run_qemu_pci.sh  run_qemu_trace.sh  run_qemu_xhci.sh
shared/: Cargo.toml
shared/src/: frame_buffer.rs  lib.rs  memory_map.rs
src/: lib.rs  main.rs
tools/: Cargo.toml  sysfont.rs  sysfont.txt
tools/src/: main.rs
