[package]
name = "bootloader"
version = "0.2.0"
edition = "2021"
authors = ["Paul Sohn <paulsohn@outlook.kr>"]
description = "the bootloader part of personal rust implementation of [Mikan OS](https://github.com/uchan-nos/mikanos)"

[dependencies]
shared = { path = "../shared" }
uefi = { version = "0.24.0", features = ["alloc"] }
uefi-macros = "0.12.0"
uefi-services = "0.21.0"

# [unstable]
# build-std = ["core", "compiler_builtins", "alloc"]

[build-dependencies]
# add these with `$ cargo add --build cc`
cc = "1.0.79"

# per-package target configs?
# [build]
# target = "x86_64-unknown-uefi"