[package]
name = "bootloader"
version = "1.5.0"
edition = "2021"
authors = ["Paul Sohn <paulsohn@outlook.kr>"]
description = "the bootloader part of personal rust implementation of [Mikan OS](https://github.com/uchan-nos/mikanos)"

[dependencies]
shared = { path = "../shared" }
uefi = { workspace = true }
uefi-services = { workspace = true }
elf = { version = "0.7.2", default-features = false }

[build-dependencies]
# add these with `$ cargo add --build cc`
cc = "1.0.79"

# per-package target configs?
# [build]
# target = "x86_64-unknown-uefi"