[package]
name = "kernel"
version = "1.5.0"
edition = "2021"
authors = ["Paul Sohn <paulsohn@outlook.kr>"]
description = "the kernel part of personal rust implementation of [Mikan OS](https://github.com/uchan-nos/mikanos)"

[dependencies]
shared = { path = "../shared" }
log = "0.4.20"

x86_64 = "0.14.10"

spin = "0.9.8"
bit_field = "0.10.2"
heapless = { version = "0.8.0", features = ["portable-atomic"] }
itertools = { version = "0.12.0", default-features = false }

pci_types = { path = "./pci_types" }
apic = { path = "./apic" }
xhci = { path = "./xhci" }
usb-xhci = { path = "./usb-xhci" }


