[package]
name = "usb-xhci"
version = "0.1.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
bitvec = { version = "1.0.1", default-features = false }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
paste = "1.0.14"
spin = "0.9.8"
volatile = { version = "0.5.1", features = ["unstable"] }
volatile_field = { path = "../volatile_field" }
xhci = { path = "../xhci" }
